Home button fixes on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 #body_page {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-color: #29ab87;
+
 }
 
 
@@ -177,9 +178,9 @@
     }
 
     .resume-btn {
-        margin-left: 15px;
-        font-size: 20px;
-        margin-right: 15px;
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     #button {
@@ -253,7 +254,7 @@
 @media only screen and (min-width: 1200px) {
     .aboutme_text {
         margin-left: 350px;
-        left: 20px;
+        left: px;
     }
 
     #button {
